vercre-didcore/src/document/snapshots/vercre_didcore__document__context__tests__deserialize_strings.snap
---
source: vercre-didcore/src/document/context.rs
assertion_line: 188
expression: doc
---
"@context":
  - "https://www.w3.org/ns/did/v1"
  - "https://w3id.org/security/suites/jws-2020/v1"

